www/hub.css
/* ... */
input.side-bar-search::placeholder {
  color: rgba(0, 0, 0, 0.25);
}

input.side-bar-search::-webkit-search-cancel-button {
  -webkit-appearance: none;
  height: 1em;
  width: 1em;
  background: url("symbols/xmark.circle.fill.svg") no-repeat 50% 50%;
  background-size: contain;
}

img.side-bar-search-icon {
  position: absolute;
  inset-inline-start: 23px;
  top: 50%;
  height: 13px;
  transform: translateY(-50%);
}

button.side-bar-tuning-button {
  position: absolute;
  margin-top: 5px;
  margin-bottom: 5px;
  inset-inline-end: 8px;
  width: 29px;
  height: 29px;
}

button.side-bar-tuning-button.active > img {
  /* https://codepen.io/sosuke/pen/Pjoqqp */
  filter: invert(9%) sepia(91%) saturate(7487%) hue-rotate(277deg) brightness(106%) contrast(110%);
}

@media (prefers-color-scheme: dark) {
  input.side-bar-search {
    background-color: rgba(255, 255, 255, 0.05);
    border: 0.5px solid rgba(255, 255, 255, 0.3);
    color: white;
  }

  input.side-bar-search::placeholder {
    color: rgba(255, 255, 255, 0.25);
  }

  input.side-bar-search::-webkit-search-cancel-button {
    filter: invert(100%);
  }

  img.side-bar-search-icon {
    filter: invert(100%);
  }

  button.side-bar-tuning-button.active > img {
    /* https://codepen.io/sosuke/pen/Pjoqqp */
    filter: invert(35%) sepia(76%) saturate(4981%) hue-rotate(259deg) brightness(102%) contrast(101%);
  }
}

div.field-item-container {
  position: relative;
  width: 100%;
  height: 30px;
  transition: background 0.25s;
}

div.field-item {
  position: absolute;
  inset-inline-start: 0px;
  inset-inline-end: calc(var(--value-width));
  top: 0px;
  height: 100%;
  mask-image: linear-gradient(to right, rgba(0, 0, 0, 1) calc(100% - 10px - 20px), rgba(0, 0, 0, 0) calc(100% - 10px));
  -webkit-mask-image: linear-gradient(
    to right,
    rgba(0, 0, 0, 1) calc(100% - 10px - 20px),
    rgba(0, 0, 0, 0) calc(100% - 10px)
  );
}

[dir="rtl"] div.field-item {
  mask-image: linear-gradient(to left, rgba(0, 0, 0, 1) calc(100% - 10px - 20px), rgba(0, 0, 0, 0) calc(100% - 10px));
  -webkit-mask-image: linear-gradient(
    to left,
    rgba(0, 0, 0, 1) calc(100% - 10px - 20px),
    rgba(0, 0, 0, 0) calc(100% - 10px)
  );
}

div.field-value {
  position: absolute;
  inset-inline-end: 12px;
  top: 0px;
  height: 100%;
  line-height: 30px;
  font-size: 15px;

  font-family: Courier, monospace;
  text-align: end;
  white-space: nowrap;
}

div.field-value svg.tunable {
  transform: scale(175%);
}

div.field-value svg.tunable:hover {
  filter: brightness(0.75);
}

div.field-value input {
  width: 50px;
  background-color: #ffffff;
  border: 1px solid #888888;
  border-radius: 2px;
  -moz-appearance: textfield;
}

div.field-value input:focus {
  background-color: #ffffaa;
}

div.field-value input::-webkit-outer-spin-button,
div.field-value input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

div.field-value input::placeholder {
  opacity: 0.6;
}

div.field-item.generated {
  opacity: 0.6;
}

div.field-item-container.highlight {
  background-color: #ffff00;
}

@media (prefers-color-scheme: dark) {
  div.field-item-container.highlight {
    background-color: #ce9421;
  }
}

svg.field-item-icon {
  position: absolute;
  inset-inline-start: calc(17px + var(--indent, 0px));
  top: 9px;
  fill: #222;
}

@media (prefers-color-scheme: dark) {
  svg.field-item-icon {
    fill: #eee;
  }
}

[dir="rtl"] svg.field-item-icon:nth-child(1) {
  transform: scaleX(-1);
}

div.field-item-label {
  position: absolute;
  inset-inline-start: calc(35px + var(--indent, 0px));
  max-width: calc(100% - 35px - var(--indent, 0px) - 10px);
  top: 5px;
  height: 20px;

  font-size: 15px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: clip;

  display: flex;
  align-items: center;
}

div.field-item-label > span {
  flex-shrink: 0;
  unicode-bidi: plaintext;
}

div.field-item-label > span:first-child {
  flex-shrink: 1;
  overflow: hidden;
  text-overflow: clip;
}

div.field-item-label.full-key {
  cursor: grab;
  font-style: italic;
}

div.field-item-label.loading {
  cursor: progress;
  opacity: 0.5;
}

div.field-item-label.known > span:first-child {
  text-decoration: underline;
}

span.field-item-type-label {
  text-decoration: none;
  font-style: normal;
  font-weight: normal;
  opacity: 0.3;
  margin-inline-start: 4px;
}

div.field-item.generated span.field-item-type-label {
  /* Restore to same color as type label for non-generated field */
  opacity: calc(0.3 / 0.6);
}

/* Search results */

div.search-results {
  position: absolute;
  inset-inline-start: 16px;
  top: 0px;
  max-width: 700px;
  min-width: 0px; /* Updated by JS based on width of search input */
  max-height: 290px;
  z-index: 12;
  overflow-x: hidden;
  overflow-y: auto;

  background-color: #ffffff;
  border-radius: 6px;
  box-shadow: 0px 0px 3px 2px #00000020;
}

div.search-results-item {
  position: relative;
  height: 25px;
  font-size: 12px;
  line-height: 25px;
  padding-inline-start: 8px;
  padding-inline-end: 20px;

  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

[dir="rtl"] div.search-results-item {
  direction: ltr;
  text-align: right;
  padding-left: 20px;
  padding-right: 8px;
}

div.search-results-item:last-child {
  padding-bottom: 3px;
}

div.search-results-item:nth-child(even) {
  background-color: #f5f5f5;
}

div.search-results-item.hovered {
  background-color: #ccc;
}

@media (prefers-color-scheme: dark) {
  div.search-results {
    box-shadow: none;
    border: 0.5px solid rgba(255, 255, 255, 0.3);
    background-color: #222222;
  }

  div.search-results-item:nth-child(even) {
    background-color: #272727;
  }

  div.search-results-item.hovered {
    background-color: #555;
  }
}

/* Dragged items */

#dragItem {
  position: absolute;
  z-index: 999;
  cursor: grabbing;
}

#dragItem span.field-text {
  white-space: nowrap;
  font-size: 15px;
  font-style: italic;
}

#dragItem div.tab {
  margin-top: 0;
  opacity: 0.5;
}
/* ... */

